--- a/client/app/account/chpwd/chpwd.html
+++ b/client/app/account/chpwd/chpwd.html
@@ -6,6 +6,7 @@
             <h1>Change Password</h1>
         </div>
         <div class="col-sm-12">
+<!--
             <p>This simple form uses forms-angular without a mongoose template.  Due to time constraints it doesn't have
                all the functionality you might expect.  The original form from the upstream branch is commented out,
                so you can easily revert to it.
@@ -16,31 +17,32 @@
                 ]">
                 <form-input name="form" formstyle="vertical" schema="settingsForm" model="user"></form-input>
 
-                <!--<form class="form" name="form" ng-submit="changePassword(form)" novalidate>-->
+-->
+                <form class="form" name="form" ng-submit="changePassword(form)" novalidate>
 
-                <!--<div class="form-group">-->
-                <!--<label>Current Password</label>-->
+                <div class="form-group">
+                <label>Current Password</label>
 
-                <!--<input type="password" name="password" class="form-control" ng-model="user.oldPassword"-->
-                <!--mongoose-error/>-->
+                <input type="password" name="password" class="form-control" ng-model="user.oldPassword"
+                mongoose-error/>
 
-                <!--<p class="help-block" ng-show="form.password.$error.mongoose">-->
-                <!--{{ errors.other }}-->
-                <!--</p>-->
-                <!--</div>-->
+                <p class="help-block" ng-show="form.password.$error.mongoose">
+                {{ errors.other }}
+                </p>
+                </div>
 
-                <!--<div class="form-group">-->
-                <!--<label>New Password</label>-->
+                <div class="form-group">
+                <label>New Password</label>
 
-                <!--<input type="password" name="newPassword" class="form-control" ng-model="user.newPassword"-->
-                <!--ng-minlength="3"-->
-                <!--required/>-->
+                <input type="password" name="newPassword" class="form-control" ng-model="user.newPassword"
+                ng-minlength="3"
+                required/>
 
-                <!--<p class="help-block"-->
-                <!--ng-show="(form.newPassword.$error.minlength || form.newPassword.$error.required) && (form.newPassword.$dirty || submitted)">-->
-                <!--Password must be at least 3 characters.-->
-                <!--</p>-->
-                <!--</div>-->
+                <p class="help-block"
+                ng-show="(form.newPassword.$error.minlength || form.newPassword.$error.required) && (form.newPassword.$dirty || submitted)">
+                Password must be at least 3 characters.
+                </p>
+                </div>
 
                 <p class="help-block"> {{ message }} </p>
 
