--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -11,6 +11,7 @@
             <p>Admin account is <code>admin@admin.com</code> / <code>admin</code></p>
         </div>
         <div class="col-sm-12">
+<!--
             <p>This simple form uses forms-angular without a mongoose template.  Due to time constraints it doesn't have
                 all the functionality you might expect.  The original form from the upstream branch is commented out,
                 so you can easily revert to it.
@@ -22,26 +23,27 @@
 
                 <form-input name="form" formstyle="vertical" schema="loginForm" model="user"></form-input>
 
-                <!--<form class="form" name="form" ng-submit="login(form)" novalidate>-->
+-->
+                <form class="form" name="form" ng-submit="login(form)" novalidate>
 
-                <!--<div class="form-group">-->
-                <!--<label>Email</label>-->
+                <div class="form-group">
+                <label>Email</label>
 
-                <!--<input type="text" name="email" class="form-control" ng-model="user.email">-->
-                <!--</div>-->
+                <input type="text" name="email" class="form-control" ng-model="user.email">
+                </div>
 
-                <!--<div class="form-group">-->
-                <!--<label>Password</label>-->
+                <div class="form-group">
+                <label>Password</label>
 
-                <!--<input type="password" name="password" class="form-control" ng-model="user.password">-->
-                <!--</div>-->
+                <input type="password" name="password" class="form-control" ng-model="user.password">
+                </div>
 
-                <!--<div class="form-group has-error">-->
-                <!--<p class="help-block" ng-show="form.email.$error.required && form.password.$error.required && submitted">-->
-                <!--Please enter your email and password.-->
-                <!--</p>-->
-                <!--<p class="help-block">{{ errors.other }}</p>-->
-                <!--</div>-->
+                <div class="form-group has-error">
+                <p class="help-block" ng-show="form.email.$error.required && form.password.$error.required && submitted">
+                Please enter your email and password.
+                </p>
+                <p class="help-block">{{ errors.other }}</p>
+                </div>
 
                 <div>
                     <button class="btn btn-inverse btn-lg btn-login" type="submit">
@@ -50,8 +52,10 @@
                     <a class="btn btn-default btn-lg btn-register" href="/signup">
                         Register
                     </a>
+                    <a class="btn btn-default btn-lg btn-register pull-right" href="/reset">
+                        Forgot Password
+                    </a>
                 </div>
-
                 
                 <hr>
                 <div>
