--- a/client/index.html
+++ b/client/index.html
@@ -34,6 +34,7 @@
     <!-- build:css({.tmp,client}) app/app.css -->
       <!-- injector:css -->
       <link rel="stylesheet" href="app/account/login/login.css">
+      <link rel="stylesheet" href="app/account/profile/profile.css">
       <link rel="stylesheet" href="app/admin/admin.css">
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/main/main.css">
@@ -123,8 +124,10 @@
         <script src="app/app.js"></script>
           <!-- injector:js -->
           <script src="app/account/account.js"></script>
+          <script src="app/account/chpwd/chpwd.controller.js"></script>
           <script src="app/account/login/login.controller.js"></script>
-          <script src="app/account/settings/settings.controller.js"></script>
+          <script src="app/account/profile/profile.controller.js"></script>
+          <script src="app/account/reset/reset.controller.js"></script>
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
