Fifth commit. Pl see README.md for more info

--- a/client/app/account/profile/profile.html
+++ b/client/app/account/profile/profile.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
-            <h3><span>Edit {{getCurrentUser().nickname}} Profile  <span class="badge pull-right">{{getCurrentUser().rank}}</span></span></h3>
+            <h3><span>{{getStateName()}} {{getCurrentUser().nickname}} Profile  <span class="badge pull-right">{{getCurrentUser().rank}}</span></span></h3>
     <hr>
         </div>
         <div class="col-sm-12">
