--- a/client/app/account/reset/reset.html
+++ b/client/app/account/reset/reset.html
@@ -1,70 +1,41 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
 <div class="container">
-    <div class="row">
-        <div class="col-sm-12">
-            <h1>Password Reset</h1>
-        </div>
-        <div class="col-sm-12">
-            <p>We will send a password reset email to :
-            </p>
-            <form class="form" name="form" ng-submit="login(form)" novalidate ng-init="loginForm=[
-                {name:'email',      type:'email',   required:true, size: 'xxlarge'}
-                ]">
-<!--AD: customization needed to get the help-block running here, in case email format wrong
-If email does not exist then show error message that suggests signing up -->        
-                
-                <div class="container-fluid page-body edit-body form-group">
-                    <form-input name="formInput" formstyle="vertical" schema="loginForm" model="user"></form-input>
-                    <!--This section only appears when there is an error message to display-->
-                    <div id="display-error" ng-show="errorMessage" ng-class="css('rowFluid')">
-                        <div class="alert alert-error col-lg-offset-3 offset3 col-sm-6 span6 alert-warning alert-dismissable">
-                            <button type="button" class="close" ng-click="dismissError()">×</button>
-                            <h4>{{alertTitle}}</h4>
-                            <div ng-bind-html="errorMessage"></div>
-                        </div>
-                    </div>
-                    <div class="form-group has-error">
-                        <p class="help-block" ng-show="form.formInput.$error.required && submitted">
-                        Please enter your email and password.
-                        </p>
-                        <p class="help-block">{{ errors.other }}</p>
-                    </div>
-
-                </div>
-
-                <!--<form class="form" name="form" ng-submit="login(form)" novalidate>-->
-
-                <!--<div class="form-group">-->
-                <!--<label>Email</label>-->
-
-                <!--<input type="text" name="email" class="form-control" ng-model="user.email">-->
-                <!--</div>-->
-
-                <!--<div class="form-group">-->
-                <!--<label>Password</label>-->
-
-                <!--<input type="password" name="password" class="form-control" ng-model="user.password">-->
-                <!--</div>-->
-
-                <!--<div class="form-group has-error">-->
-                <!--<p class="help-block" ng-show="form.email.$error.required && form.password.$error.required && submitted">-->
-                <!--Please enter your email and password.-->
-                <!--</p>-->
-                <!--<p class="help-block">{{ errors.other }}</p>-->
-                <!--</div>-->
-
-                <div>
-                    <button class="btn btn-inverse btn-lg btn-login" type="submit">
-                        Send Email
-                    </button>
-                    <a class="btn btn-default btn-lg btn-register" href="/signup">
-                        Register
-                    </a>
-                </div>
-            </form>
-
-        </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <h1>Reset Password</h1>
     </div>
-    <hr>
+    <div class="col-sm-12">
+      <form class="form" name="form" ng-submit="register(form)" novalidate>
+
+        <div class="form-group" ng-class="{ 'has-success': form.email.$valid && submitted,
+                                            'has-error': form.email.$invalid && submitted }">
+          <label>Email</label>
+
+          <input type="email" name="email" class="form-control" ng-model="user.email"
+                 required
+                 mongoose-error/>
+          <p class="help-block" ng-show="form.email.$error.email && submitted">
+            Doesn't look like a valid email.
+          </p>
+          <p class="help-block" ng-show="form.email.$error.required && submitted">
+            What's your email address?
+          </p>
+          <p class="help-block" ng-show="form.email.$error.mongoose && submitted">
+            {{ errors.email }}
+          </p>
+        </div>
+
+        <div>
+          <button class="btn btn-inverse btn-lg btn-login" type="submit">
+            Reset Password
+          </button>
+          <a class="btn btn-default btn-lg btn-register" href="/login">
+            Login
+          </a>
+        </div>
+      </form>
+    </div>
+  </div>
+  <hr>
 </div>
