--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -5,8 +5,6 @@
     <h1>'Allo, 'Allo!</h1>
     <p class="lead">
     Always a pleasure scaffolding your apps.<br />
-    Speaking of apps, I have taken the liberty of creating a database of applicants for the under-butler position and adding it to the menu above.
-    Kick-start your next web app with yeoman and forms-angular</p>
     <img src="assets/images/yeoman.png" alt="I'm Yeoman">
   </div>
 </header>
@@ -34,8 +32,6 @@
 
 <footer class="footer">
   <div class="container">
-      <p>forms-angular generator v0.1.1 |
-      <a href="https://twitter.com/formsangular">@formsangular</a> |
-      <a href="https://github.com/forms-angular/generator-angular-fullstack/issues?state=open">Issues</a></p>
+      <p>Copyright Meanapp</p>
   </div>
 </footer>
