interim- do not use

--- a/client/index.html
+++ b/client/index.html
@@ -39,6 +39,7 @@
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/welcome/welcome.css">
       <link rel="stylesheet" href="components/loginModal/login.css">
+      <link rel="stylesheet" href="components/menu/menu.css">
       <!-- endinjector -->
     <!-- endbuild -->
   </head>
@@ -139,6 +140,7 @@
           <script src="components/auth/user.model.js"></script>
           <script src="components/loginModal/loginModal.controller.js"></script>
           <script src="components/loginModal/loginModal.service.js"></script>
+          <script src="components/menu/menu.directive.js"></script>
           <script src="components/mongoose-error/mongoose-error.directive.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
           <script src="components/site/site.model.js"></script>
