--- a/client/app/welcome/welcome.html
+++ b/client/app/welcome/welcome.html
@@ -1,9 +1,4 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
-<link rel="stylesheet" href="reveal/css/reveal.min.css">
-<link rel="stylesheet" href="reveal/css/theme/default.css" id="theme">
-<!-- Wrap the entire slide show in a div using the "reveal" class. -->
-<div class="reveal" style="position:absolute;x:0;y:0"> <!--does not seem to work without using style-->
-    <!-- Wrap all slides in a single "slides" class -->
-    <slideshow slides='slides' config='reveal'></slideshow>
-</div>
-<script src="reveal/js/reveal.min.js"></script>
+<div ng-include="'components/navbar/navbar.html'"/>
+<!--check if reveal is present and then add below-->
+<div ng-if="reveal" ng-include="'components/slideshow/reveal.html'"/>
+<!-- AD: will be adding other plugin possibilities here -->
